Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-79350

Crash in addStatesToRenderStateSet()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.14
    • 5.14.0 Beta 1
    • Qt3D
    • None
    • Linux/X11, Windows
    • fe790f1537d17fca586a2c6ea7f57c02cfab1b88

      I get a crash in addStatesToRenderStateSet() in renderviewjobutils.cpp. RenderStateNode *node is referenced without checking for nullptr.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lemire_p Paul Lemire
            harald Harald Vistnes
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes